# pycode

./: #todo.org#  .dir-locals.el  .gitignore  Cargo.toml  README.html  README.org  build.ps1  build.rs  canvas.py  early-init.el  init.el  project.ps1  pycode.pyi  pyproject.toml  test.csv  test_spike_detection_parameters.py  todo.org
c_pycode/: pycode_h5.c  pycode_h5.h
crates/pycode-hdf5/: Cargo.toml  build.rs
examples/: #analysis_of_an_experiment.py#  analysis_of_an_experiment.py  analysis_of_an_experiment_2.py  analyze_phase.py  frequency_of_a_phase.py  plot_psth_of_phase.py  spike_detection_in_folder.py  test_spike_detection_parameters.py  view_channel.py
lm-languages/: cmake.el  lm-arduino.el  lm-matlab.el  lm-powershell.el  lm-rust.el
lm-lisp/: lm-modeline.el  lm-pomodoro.el
lm-modules/: lm-builtin-completion.el  lm-cape.el  lm-center-document.el  lm-company.el  lm-completion.el  lm-corfu.el  lm-dired-sidebar.el  lm-dired.el  lm-doom-themes.el  lm-eat.el  lm-eglot.el  lm-eshell.el  lm-evil.el  lm-grep.el  lm-lsp-mode.el  lm-lsp.el  lm-modus-themes.el  lm-olivetti.el  lm-org.el  lm-tree-sitter.el  lm-which-key.el  lm-yasnippet.el
pycode/: #converting_rules.py#  __init__.py  converting_rules.py  experiment.py  operations.py  python_logisi.py  utils.py
pycode-gui/: __init__.py  canvas.py  channel_viewer.py  main.py  memory.py  peak_detection.py  phase_explorer.py  psth.py
pycode-gui/forms/: channel_viewer.py  main_window.py  phase_explorer.py  rasterplot.py
src/: #lib.rs#  channel.rs  error.rs  lib.rs  peak_train.rs  phase.rs  sys.rs  tests.rs
(+37 files in other folders)
