[workspace]
members = [
        "crates/spike-rs",
        "crates/pycode-hdf5/", "crates/pycode-hdf5",
]

[package]
name = "pycode-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "pycode"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "*"
spike_rs = { path="crates/spike-rs" }
pycode-hdf5 = { path="crates/pycode-hdf5" }
