[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pycode"
requires-python = ">=3.8"
authors = [
    {name = "Leonardo Mascelli"},
    {email = "lmascelli@gmail.com"},
]
mantainers = [
    {name = "Leonardo Mascelli", email = "lmascelli@gmail.com"},
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
